2005-04-22  Alasdair Allan <aa@astro.ex.ac.uk>

        * Original version.